<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_Home" />
    <item
        android:id="@+id/navigation_notifikasi"
        android:icon="@drawable/notifikasi"
        android:title="@string/title_Notifikasi" />
    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/scan"
        android:title="@string/title_Scan" />
    <item
        android:id="@+id/navigation_riwayat"
        android:icon="@drawable/riwayat"
        android:title="@string/title_Riwayat" />
    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/profil2"
        android:title="@string/title_Profil" />
</menu>